auth_manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth-container
        image: ghcr.io/ampcome/centa-auth:latest
        # image: nhost/hasura-auth
        # image: nhost/hasura-auth:latest
        # readinessProbe:
        #   httpGet:
        #     path: /healthz
        #     port: 80
        ports:
        - containerPort: 4000
      imagePullSecrets:
      - name: registry-cred

---
apiVersion: v1
kind: Service
metadata:
 name: authsvc  #service name (it can be any name)
spec:
 type: NodePort
 ports:
 - name: apache
   nodePort: 30009 #node port mention the same in security group
   port: 4000 #service port
   targetPort: 4000 #container port
   protocol: TCP
 selector:     #mapping to pod
   app: auth
