graphql_manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graphql
  template:
    metadata:
      labels:
        app: graphql
    spec:
      containers:
      - name: graphql-container
        image: hasura/graphql-engine:v2.2.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
 name: hasurasvc  #service name (it can be any name)
spec:
 type: NodePort
 ports:
 - name: apache
   nodePort: 30002 #node port mention the same in security group
   port: 8080 #service port
   targetPort: 8080 #container port
   protocol: TCP
 selector:     #mapping to pod
   app: graphql
