storage_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hasura-storage-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hasura-storage1
  template:
    metadata:
      labels:
        app: hasura-storage1
    spec:
      containers:
      - name: hasura-storage1
        # image: nhost/hasura-storage:0.2.3
        image: nhost/hasura-storage:0.5.0
        args:
        - serve
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: storagesvc
spec:
  selector:
    app: hasura-storage1
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30011
  type: NodePort
