path_based_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: centaingress
  #  namespace: devproject
spec:
   ingressClassName: nginx
   rules:
   - host: "ampcomecenta.in"
     http:
       paths:
       - path: "/"
         pathType: "Prefix"
         backend:
           service:
             name: hasurasvc
             port:
              number: 8080
   - host: "ampcomecenta.in"
     http:
       paths:
       - path: "/v1/auth"
         pathType: "Prefix"
         backend:
           service:
               name: authsvc
               port:
                 number: 4000
   - host: "ampcomecenta.in"
     http:
       paths:
       - path: "/v1/storage"
         pathType: "Prefix"
         backend:
           service:
              name: storagesvc
              port:
                number: 8000
